syntax = "proto3";

option csharp_namespace = "Inventory";

package inventory;

// Define a product message
message Product {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
}

// Request message to get the product details
message GetProductRequest {
  int32 product_id = 1;
}

// Response message to return product details
message GetProductResponse {
  Product product = 1;
}

// Request message to update the product quantity
message UpdateProductQuantityRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

// Define the inventory service
service InventoryService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc UpdateProductQuantity (UpdateProductQuantityRequest) returns (Product);
}
